2003-09-06  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaction.c (gtk_action_connect_proxy): Disconnect from 
	prev_action, not from action.  (Fix by David Hampton)

Fri Sep  5 14:15:10 2003  Owen Taylor  <otaylor@redhat.com>
 
	* Back out locale-dependent interpretation of
 	KP_Decimal, the official XFree86 interpretation
 	is that KP_Decimal => . KP_Separator => ,
 	always, independent of locale. 
 	(#105161, Frederic Crozat, 
 	http://bugs.xfree86.org/show_bug.cgi?id=534)
 
2003-09-04  Matthias Clasen  <maclas@gmx.de>

	* tests/testmerge.c: Test buttons and toggle buttons as proxies.

	* gtk/gtktoggleaction.c (connect_proxy): 
	(gtk_toggle_action_real_toggled): Support toggle buttons as proxies. Note 
	that a "draw_as_radio" property is needed for check buttons similar to 
	check menu items, in order to fully support button proxies for radio actions.

	* gtk/gtkaction.c (connect_proxy): Allow buttons as proxies.

	* tests/testmerge.c (toggle_dynamic): Test gtk_ui_manager_add_ui(). 

	* gtk/gtkuimanager.h: Add GtkUIManagerItemType enum which is needed for the
	'type' argument of gtk_ui_manager_add_ui().

	* gtk/gtkuimanager.[hc] (gtk_ui_manager_add_ui): Add 'type' and 'top' arguments
	to make this function as powerful as the XML methods of adding UI.  (#120647)

Thu Sep  4 19:11:23 2003  Kristian Rietveld  <kris@gtk.org>

	Merge from stable.

	* docs/RELEASE-HOWTO: updates.

2003-09-04  Matthias Clasen  <maclas@gmx.de>

	* tests/merge-2.ui: Use "position" instead of "pos".

	* gtk/gtkuimanager.c (start_element_handler): No need 
	to be terse: Change the name of the "pos" attribute
	to "position".

2003-09-04  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c: Un-prefix GtkUIManagerNodeType and 
	GtkUIManagerNode to shorten the names and to make the
	GTK_UI_MANAGER_<TYPE> names available for a public enum.

	* gtk/gtkactiongroup.c:
	* gtk/gtkuimanager.c: Various doc tweaks.	

	* gtk/gtkuimanager.c (start_element_handler):